[package]
name = "espresso-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26.1", features = ["event-stream"] }
dotenv = "0.15.0"
inquire = "0.6.1"
parse_duration = "2.1.1"
serde = { version = "1.0.160", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
tui = "0.19.0"
ureq = { version = "2.6.2", features = ["serde_json", "serde", "json"] }
